--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   },
   "devDependencies": {
-    "@fitbit/sdk": "~3.0.0"
+    "@fitbit/sdk": "~3.0.0",
+    "@fitbit/sdk-cli": "^1.0.0"
   }
 }
