--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "fitbit": {
     "appUUID": "304f7231-a24a-40ec-8c8e-df3198a2d6fd",
     "appType": "app",
-    "appDisplayName": "LIFX",
+    "appDisplayName": "LIFX Remote",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffeb3b",
     "requestedPermissions": [
@@ -14,7 +14,7 @@
     ],
     "i18n": {
       "en": {
-        "name": "LIFX"
+        "name": "LIFX Remote"
       }
     }
   },
